packages/button/src/button.pcss
.sds-button {
  --button-border-radius: var(--sds-space-border-radius-full);
  --button-padding: var(--sds-space-padding-small);

  align-items: center;
  background-color: transparent;
  border: 0 none;
  border-radius: var(--button-border-radius);
  color: var(--sds-color-text-primary);
  cursor: pointer;
  display: inline-flex;
  font-size: var(--sds-typography-body-l-fontsize);
  font-weight: var(--sds-typography-body-l-fontweight);
  line-height: var(--sds-typography-body-l-lineheight);
  gap: var(--button-padding);
  padding: var(--button-padding)
    calc(var(--button-padding) + var(--button-padding));

  &__icon {
    align-items: center;
    display: flex;
    font-size: var(--sds-typography-fontsize-700);
    justify-content: center;

    &--left {
      margin-left: calc(var(--button-padding) * -1);
    }

    &--right {
      margin-right: calc(var(--button-padding) * -1);
    }

    &--only {
      margin-right: calc(var(--button-padding) * -1);
      margin-left: calc(var(--button-padding) * -1);
    }
  }

  &:focus-visible {
    outline: var(--sds-focus-outline);
  }

  &--icon-left {
    flex-direction: row-reverse;
  }

  &--strong {
    background-color: var(--sds-color-interaction-primary-strong-default);
    color: var(--sds-color-text-on-strong);

    &:hover,
    &:focus-visible {
      background-color: var(--sds-color-interaction-primary-strong-highlight);
    }

    &:active {
      background-color: var(--sds-color-interaction-primary-strong-pressed);
    }
  }

  &--subtle {
    background-color: var(--sds-color-interaction-primary-subtle-default);

    &:hover,
    &:focus-visible {
      background-color: var(--sds-color-interaction-primary-subtle-highlight);
    }

    &:active {
      background-color: var(--sds-color-interaction-primary-subtle-pressed);
    }
  }

  &--transparent {
    &:hover,
    &:focus-visible {
      background-color: var(
        --sds-color-interaction-primary-transparent-highlight
      );
    }

    &:active {
      background-color: var(
        --sds-color-interaction-primary-transparent-pressed
      );
    }
  }

  &--critical {
    background-color: var(--sds-color-interaction-danger-strong-default);
    color: var(--sds-color-text-on-strong);

    &:hover,
    &:focus-visible {
      background-color: var(--sds-color-interaction-danger-strong-highlight);
    }

    &:active {
      background-color: var(--sds-color-interaction-danger-strong-pressed);
    }
  }

  &--neutral {
    background-color: var(--sds-color-interaction-neutral-subtle-default);

    &:hover,
    &:focus-visible {
      background-color: var(--sds-color-interaction-neutral-subtle-highlight);
    }

    &:active {
      background-color: var(--sds-color-interaction-neutral-subtle-pressed);
    }
  }

  &--neutral-transparent {
    &:hover,
    &:focus-visible {
      background-color: var(
        --sds-color-interaction-neutral-transparent-highlight
      );
    }

    &:active {
      background-color: var(
        --sds-color-interaction-neutral-transparent-pressed
      );
    }
  }

  &--small {
    --button-border-radius: var(--sds-space-border-radius-minimal);
    --button-padding: var(--sds-space-padding-minimal);

    font-size: var(--sds-typography-body-default-fontsize);
    font-weight: var(--sds-typography-body-default-fontweight);
    line-height: var(--sds-typography-body-default-lineheight);
  }

  &:disabled {
    background: repeating-linear-gradient(
      -45deg,
      transparent,
      transparent var(--sds-base-size-s),
      var(--sds-color-interaction-neutral-subtle-default) var(--sds-base-size-s),
      var(--sds-color-interaction-neutral-subtle-default)
        calc(var(--sds-base-size-s) * 2)
    );
    color: var(--sds-color-text-primary);
    cursor: not-allowed;
  }
}

